# cpsa

./: .gitignore  3notes.txt  ChangeLog  NEWS  README  build.xml  cabaltst  cinstall  cpsa.cabal  cpsa4.cabal  cpsatst  dbtst  fixperms  ghci  license.txt  mkghci  notes.txt  setup.bat  titletst  z
cmarrows/: rgbx0009.mp  rgbx0016.mp  rgbx0020.mp  sgbx0008.mp  sgbx0010.mp  sgbx0013.mp  sgbx0014.mp  sgbx0015.mp  sgbx0018.mp  sgbx0021.mp  sgbx0022.mp  tgbx0000.mp  tgbx0001.mp  tgbx0003.mp  tgbx0005.mp  tgbx0006.mp  tgbx0027.mp
coq/: .gitignore  Alg.v  Alt_sem.v  CRun.v  CRun_csem.v  CSem.v  Chk_sorts.v  Comp.v  Derives.v  Exec.v  Intro.v  Makefile  Match.v  Monad.v  Nonce.v  Preamble.v  Proc.v  README  Role.v  Run.v  Run_sem.v  Sem.v  SemTactics.v  Sem_tactics.v  Subst.v  Unilateral.v  Unilateral_proof.v  Unilateral_role.v  _CoqProject  mkdist  mkdoc  procdoc.mk  procdoc.tex  unilateral.scm
coq/Examples/: Bad_unilateral.v  Bad_unilateral_proof.v  Bad_unilateral_role.v  Blanchet.v  Blanchet_akey.v  Blanchet_akey_proof.v  Blanchet_akey_role.v  Blanchet_proof.v  Blanchet_role.v  Cert.v  Cert_proof.v  Cert_role.v  Invk.v  Invk_proof.v  Invk_role.v  Ltk.v  Ltk_proof.v  Ltk_role.v  Makefile  Nsl.v  Nsl_proof.v  Nsl_role.v  Otway_rees.v  Otway_rees_proof.v  Otway_rees_role.v  Privk.v  Privk2.v  Privk2_proof.v  Privk2_role.v  Privk_proof.v  Privk_role.v  Pubk.v  Pubk2.v  Pubk2_proof.v  Pubk2_role.v  Pubk_proof.v  Pubk_role.v  README  Yahalom.v  Yahalom_proof.v  (+16 more)
dhtst/: README  attest.tst  basic_dh.scm  basic_dh.tst  blanchet_doorsep.tst  dh_sig_base_points_3.scm  dh_sig_base_points_3.tst  dhnsl_use.tst  staticdh.scm  staticdh.tst  station_newhope.tst  test_g.tst  unauth_dh.scm  unauth_dh.tst
doc/: Make4.hs  Makefile  README  SimpleDiffieHellman.hs  bcasyntax.tex  blanchet.scm  core_state_ideas.msg  cpsa.bib  cpsa.mk  cpsa4.mk  cpsa4prolog.pl  cpsa4roletran.md  cpsadesign.tex  cpsadhnra.tex  cpsadiagrams.mp  cpsagoals.tex  cpsaintro.css  cpsaintro.html  cpsaintroslides.tex  cpsalogo.mp  cpsaprimer.tex  cpsaspec.tex  cpsatheory.tex  cpsauser.html  dhke.scm  goals.scm  index.html  macros.tex  mkdoc  mphack.mk.diff  navigation.js  ns.scm  parreduce.lhs  puzzle_exercise.txt  readme.html  reduce.lhs  rule.scm  rules.scm  slide1.html  slide10.html  (+16 more)
doc/dist_bnd_prots/: Makefile  README.md  bcfiat.prot  bcsig.prot  crcs.prot  hk.prot  ka.prot  mauw.prot  meadows.prot  munilla.prot  paysafe.prot  reid.prot  retread-public.prot  retread-shared.prot  swiss.prot  table  tread-public.prot  tread-shared.prot  treads.prot
doc/init/: Makefile
doc/src/: Makefile  bcasyntax.tex  blanchet.mp  cpsa.bib  cpsaanalyze.tex  cpsadesign.tex  cpsadha.tex  cpsafoundation.tex  cpsagoals.tex  cpsaintroslides.tex  cpsaoverview.tex  cpsaprimer.tex  cpsaspec.tex  macros.tex  mitrelogo.mp  mitreslides.sty  mkdoc  rulestheory.tex
doc/src/cmarrows/: README  cmarrows.mp  rgbx0009.mp  rgbx0016.mp  rgbx0020.mp  rgbx0025.mp  sgbx0008.mp  sgbx0010.mp  sgbx0011.mp  sgbx0012.mp  sgbx0013.mp  sgbx0014.mp  sgbx0015.mp  sgbx0017.mp  sgbx0018.mp  sgbx0019.mp  sgbx0021.mp  sgbx0022.mp  sgbx0023.mp  sgbx0024.mp  tgbx0000.mp  tgbx0001.mp  tgbx0002.mp  tgbx0003.mp  tgbx0004.mp  tgbx0005.mp  tgbx0006.mp  tgbx0007.mp  tgbx0027.mp
doc/src/cpsa4manual/: CPSA_cribsheet.pptx  Makefile  algebra.tex  algorithm.tex  basic.tex  goals.tex  (+32 more)
exp/: dh-ca.lsp  dh-ca.tst  dh_cert.scm  dh_cert.tst  dh_encrypt.lisp  dhke.tst  dhke_pen_non.tst  dhnsl.lisp  dhnsl.scm  dhr.scm  dhr.tst  station_to_station.tst  tor.scm  tor.tst
src/: cpsa.pl  cpsa2svg  cpsa4prolog.pl  cpsaops.scm  cpsaperm.scm  cpsaspass.scm  genshape.scm  js2hs  lastlabel.py  perm.pl  ppfile.pl  prover9.pl  readcpsajson.py  split.py  stripseen.l  unsorted.pl  zoom.js  zoom.xml
src/CPSA/: Algebra.hs  Channel.hs  Characteristic.hs  Cohort.hs  Displayer.hs  GenRules.hs  Goal.hs  IntLinEq.hs  LoadFormulas.hs  Loader.hs  Main.hs  Operation.hs  Options.hs  Protocol.hs  Reduction.hs  Signature.hs  Strand.hs
src/cpsaextras/: Printer.scala  SExpr.scala
src/ocaml/: Makefile  README  cpsa.itarget  cpsa.mllib  expand.ml  lexer.mll  main.ml  main.mli  parser.mly  reader.mli  reader.mly  scanner.mll  sexpr.ml  sexpr.mli
src/scala/: Main.scala  Pretty.scala
src/vscode-cpsa/: .vscodeignore  CHANGELOG.md  DEVELOPING.md  README.md  package-lock.json  package.json
tst/: DH_hack.scm  DH_hack.tst  Make.hs  Makefile  README  ab.scm  ab.tst  abc.scm  abc.tst  aik.tst  atomic-open-closed.scm  atomic-open-closed.tst  attest.scm  attest.tst  auth-enc.scm  auth-enc.tst  auth-hash.scm  auth-hash.tst  blanchet-strandmax.scm  blanchet-strandmax.tst  blanchet.scm  blanchet.tst  blanchet_doorsep.tst  bug_example.lsp  bug_example.scm  bug_example.tst  cert_lang.scm  cert_lang.tst  chan-envelope.scm  chan-envelope.tst  chan-perrig-song.scm  chan-perrig-song.tst  chan-unilateral.scm  chan-unilateral.tst  chan-yahalom-role-decl.tst  chan-yahalom.scm  chan-yahalom.tst  commitment.lisp  commitment.scm  commitment.tst  (+276 more)
tst-dhcr-alt/: dhcr_um3.scm  dhcr_um_goals.scm  dhcr_um_goals.tst  dhcr_um_implicit_auth.scm
tst-harder/: dhcr_um.scm  dhcr_um3.scm  dhcr_um3_goals.scm  dhcr_um_goals.scm  dhcr_um_implicit_auth.scm  dhcr_umx.scm  dhcr_umx_goals.scm  dhcr_umx_implicit_auth.scm
tst-unbalanced-stores/: Makefile  cpsa4.mk  open-closed-tag.scm  subatomic-open-closed-test-genrule.scm  subatomic-open-closed.scm
tst/diffie-hellman-examples/: dh-ca_hack.scm  dh_group_sig.scm  dh_group_sig_alt.scm  dh_group_sig_auth_failure.scm  dhcr_um.scm  dhcr_um3_goals.scm  dhcr_um_exercise_resolved_bug.scm  dhcr_um_expt.scm  dhcr_um_forward.scm  dhcr_um_forward_expr.scm  dhcr_um_tiny.scm  dhcr_umx_tmp.scm  dhstatic-state.scm  sts_non_role.scm
tst/the_sync_env_suite/: locn_envelope.scm  locn_envelope.txt  locn_envelope.xhtml  sync_locn_envelope-tmp.txt  sync_locn_envelope.scm  sync_locn_envelope.txt  sync_locn_envelope.xhtml  sync_locn_envelope_no_auth_shapes.txt  sync_locn_envelope_no_auth_shapes.xhtml  sync_locn_envelope_shapes.txt  sync_locn_envelope_shapes.xhtml
tst/tmp/: dhcr_um3_altered.scm  dhcr_umx_altered.scm
(+201 files in other folders)
